# GoogleCloudPlatform-_-aether

./: .gitignore  Cargo.toml  FINAL_DESIGN.md  LANGUAGE_REFERENCE.md  LICENSE  README.md  user-guide.md
.gemini/: logs.json
.github/workflows/: ci.yml
adhoc_tests/: add_test  debug_constants.aether  debug_function.aether  large  medium  simple_test  simple_test.aether  small  test_add  test_add.c  test_arithmetic  test_arithmetic.aether  test_arithmetic_simple  test_arithmetic_simple.aether  test_array_basic.aether  test_arrays.aether  test_assignment  test_assignment.aether  test_break_continue  test_break_continue.aether  test_comparison  test_comparison.c  test_complex  test_complex.aether  test_complex_calls  test_complex_calls.aether  test_comprehensive  test_comprehensive.aether  test_comprehensive_features.aether  test_concat.aether  test_conditionals.aether  test_conditionals_fixed  test_conditionals_fixed.aether  test_constant_debug  test_constant_debug.aether  test_constants.aether  test_constants_correct.aether  test_constants_simple  test_constants_simple.aether  test_constants_working  (+128 more)
adhoc_tests/test_output_dir/: simple_module.ast
benches/: compile_bench.rs  compiler_benchmarks.rs
docs/: README.md  TESTING_PLAN.md  archAetherScript.md  enhanced_verification.md  error_handling.md  function_metadata.md  http_server_chat.md  llm_optimized_errors.md  missing_features.md  mutability_and_borrowing.md  ownership_architecture.md  ownership_design.md  resource_management.md  running_examples.md  standard_library.md  test_ffi_callbacks_summary.md  unimplemented_features.md
examples/arithmetic_operations/: Makefile  README.md  main.aether
examples/arrays/: Makefile  README.md  main.aether
examples/arrays_simple/: Makefile  README.md  arrays_simple  main.aether
examples/blog_http_simple/: Makefile  README.md  main.aether
examples/blog_listen/: Makefile  README.md  blog_listen  main.aether
examples/blog_server_loop/: Makefile  README.md  main.aether
examples/blog_server_running/: Makefile  README.md  main.aether
examples/comparison_logic/: Makefile  README.md  main.aether
examples/constants_type_aliases/: Makefile  README.md  main.aether
examples/control_flow/: Makefile  README.md  main.aether
examples/debug_http_server/: Makefile  README.md  main.aether
examples/enum_test/: Makefile  README.md  main.aether
examples/enum_test_basic/: Makefile  README.md  main.aether
examples/error_demo/: Makefile  README.md  main.aether
examples/error_handling/: Makefile  README.md  main.aether
examples/error_simple/: Makefile  README.md  main.aether
examples/factorial/: Makefile  README.md  main.aether
examples/ffi_advanced/: Makefile  README.md  main.aether  test_ffi_callbacks.c
examples/ffi_demo/: Makefile  README.md  main.aether
examples/ffi_strlen_test/: Makefile  README.md  main.aether
examples/foreach/: Makefile  README.md  main.aether
examples/function_metadata_demo/: Makefile  README.md  main.aether
examples/hello_world/: Makefile  README.md  main.aether
examples/http_blog_server/: Makefile  README.md  main.aether
examples/http_demo/: Makefile  README.md  http_demo.ll  main.aether
examples/http_server/: Makefile  README.md  main.aether
examples/http_server_stay/: Makefile  README.md  main.aether
output/: test_type_errors.ast  valid_test.ast
runtime/: Cargo.toml  README_MEMORY.md  test_hello.aether
runtime/src/: collections.rs  concurrency.rs  ffi.rs  ffi_structs.rs  http.rs  io.rs  json.rs  lib.rs  math.rs  memory.rs  memory_alloc.rs  network.rs  time.rs
scripts/: README.md  build_runtime.sh  compile_aether.sh  fix_stdlib_modules.sh  fix_symbols.sh  run_blog_demo.sh  run_example.sh  run_stdlib_example.sh  test_review.sh
src/: external_stubs.rs  lib.rs  main.rs  module_loader.rs
src/ast/: mod.rs  (+1 more)
stdlib/: README.md  std.aether
tests/: Makefile.ffi  add_lib.aether  add_main.aether  arithmetic.aether  cli_integration_tests.rs  comparison.aether  concurrency_integration_test.rs  control_flow.aether  control_flow_semantic_tests.rs  control_flow_tests.rs  end_to_end_tests.rs  ffi_test_lib.c  ffi_tests.rs  function_calls.aether  integration_tests.rs  libffi_test.dylib  llvm_integration_tests.rs  math_ops.aether  memory_tests.rs  mir_tests.rs  optimization_tests.rs  ownership_analysis_test.rs  ownership_comprehensive_test.aether  ownership_integration_test.rs  property_based_tests.proptest-regressions  property_based_tests.rs  simple.aether  simple_comparison.aether  simple_with_function.aether  test_add_main.aether  test_add_numbers.aether  test_control_flow.aether  test_enhanced_verification.rs  test_error_recovery.aether  test_error_recovery2.aether  test_ffi.aether  test_ffi_struct_codegen.rs  test_ffi_struct_driver.rs  test_float.aether  test_float_main.aether  (+11 more)
tutorials/: ADVANCED_TOPICS.md  GETTING_STARTED.md
(+285 files in other folders)
